--- a/src/style.css
+++ b/src/style.css
@@ -71,7 +71,11 @@ body{
     color: white;
 }
 
-.image a:visited {
+a{
+    text-decoration: none;
+}
+
+.image a:visited, .image a:link {
     color: white;
   }
 
