--- a/src/style.css
+++ b/src/style.css
@@ -33,13 +33,22 @@ body{
     border-right: 3px solid black;
 }
 
-
-
 .daily-tasks {
     margin-left: 15px;
     gap: 20px;
 }
-.daily-tasks :hover{
+
+.box{
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+
+button{
+    height: 20px;
+}
+
+.daily-tasks:hover{
     background-color: rebeccapurple;
 }
 
@@ -60,6 +69,8 @@ body{
 .main-info{
     grid-column: 2;
     grid-row: 2;
+    flex-flow: column;
+    align-items: center;
 }
 
 .image{
